--- a/views/sent.html
+++ b/views/sent.html
@@ -26,17 +26,19 @@ async function modifyPdf() {
       // Get the first page of the document
       const pages = pdfDoc.getPages()
       const firstPage = pages[0]
+      
+      console.log(pdfDoc.getKeywords())
 
       // Get the width and height of the first page
       const { width, height } = firstPage.getSize()
 
       // Draw a string of text diagonally across the first page
-      firstPage.drawText('This text was added with JavaScript!', {
+      firstPage.drawText('highlighted version', {
         x: 5,
         y: height / 2 + 300,
         size: 50,
         font: helveticaFont,
-        color: rgb(0.95, 0.1, 0.1),
+        color: rgb(1, 215/255, 166/255),
         rotate: degrees(-45),
       })
 
