🎣⏱ Checkpoint ./server.js:2055672/275 ./views/index.html:2055672/752 ./.gitignore:2055672/58

--- a/views/index.html
+++ b/views/index.html
@@ -2,29 +2,21 @@
 <html>
 <head>
     <meta charset="utf-8">
-    <title>Glitch image-hosting</title>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css">
-    <link rel="favicon" href="/uploaded/b60b1219a889db412a6f2eafb3a4698d.jpg">
-    <style>
-    form {
-        padding-top: 20px;
-        display: flex;
-        justify-content: space-between;
-    }
-    input.btn {
-        flex: 0.8;
-    }
-    button.btn {
-        flex: 0.15;
-    }
-    </style>
+    <title>OD Truck Highlighter</title>
 </head>
 <body>
     <div class="container">
         <form action="/upload" method="post" enctype="multipart/form-data">
             <input type="file" name="image">
-            <button class="btn btn-primary" type="submit" style="border-radius: 4px;">Upload Your Image</button>
+            <button class="btn btn-primary" type="submit">Highlight</button>
         </form>
+      <p>
+        made by luke gutman 2022
+      </p>
+      <p>
+        source code:
+      </p>
+      <a href="https://github.com/lukelmg/PDFedit">code</a>
     </div>
 </body>
 </html>
