--- a/views/sent.html
+++ b/views/sent.html
@@ -1,3 +1,21 @@
 <html>
-  <a href="/uploads" download>pdf</a>
+  <a id="thelink" href="/uploads" download>download highlighted pdf</a>
 </html>
+
+<style>
+
+  #thelink {
+    text-size: 40px;
+    display:none;
+  }
+
+</style>
+
+<script>
+
+  let link = document.getElementById('thelink');
+  setTimeout(function() {
+    link.style.display = 'block'
+  }, 1200);
+
+</script>
