--- a/views/index.html
+++ b/views/index.html
@@ -1,22 +1,20 @@
 <!DOCTYPE html>
 <html>
-<head>
-    <meta charset="utf-8">
+  <head>
+    <meta charset="utf-8" />
     <title>OD Truck Highlighter</title>
-</head>
-<body>
+  </head>
+  <body>
     <div class="container">
-        <form action="/upload" method="post" enctype="multipart/form-data">
-            <input type="file" name="image">
-            <button class="btn btn-primary" type="submit">Highlight</button>
-        </form>
-      <p>
-        made by luke gutman 2022
-      </p>
-      <p>
-        source code:
-      </p>
+      <h1><u> od truck list highlighter </u></h1>
+      <form action="/upload" method="post" enctype="multipart/form-data">
+        <input type="file" name="image" />
+        <button class="btn btn-primary" type="submit">Highlight</button>
+      </form>
+      <br /><br /><br />
+      <p>made by luke gutman 2022</p>
+      <p>source code:</p>
       <a href="https://github.com/lukelmg/PDFedit">code</a>
     </div>
-</body>
+  </body>
 </html>
