📺🚟 Checkpoint ./views/sent.html:2055672/18 ./server.js:2055672/825 ./views/index.html:2055672/4040 ./.gitignore:2055672/47

--- a/views/index.html
+++ b/views/index.html
@@ -2,11 +2,11 @@
 <html>
   <head>
     <meta charset="utf-8" />
-    <title>OD Truck Highlighter</title>
+    <title>OD Truck List Highlighter</title>
   </head>
   <body>
     <div class="container">
-      <h1><u> od truck list highlighter </u></h1>
+      <h1><u> OD truck list highlighter </u></h1>
       <form action="/upload" method="post" enctype="multipart/form-data">
         <input type="file" name="image" />
         <button class="btn btn-primary" type="submit">Highlight</button>
@@ -14,7 +14,7 @@
       <br /><br /><br />
       <p>made by luke gutman 2022</p>
       <p>source code:</p>
-      <a href="https://github.com/lukelmg/PDFedit">code</a>
+      <a href="https://github.com/lukelmg/PDFedit">github page</a>
     </div>
   </body>
 </html>
