--- a/views/index.html
+++ b/views/index.html
@@ -14,7 +14,7 @@
       <br /><br /><br />
       <p>made by luke gutman 2022</p>
       <p>source code:</p>
-      <a href="https://github.com/lukelmg/PDFedit">github page</a>
+      <a onclick="window.open('https://github.com/lukelmg/pdfedit', '_blank').focus();" style="color: blue; cursor:pointer"><u>github page</u></a>
     </div>
   </body>
 </html>
